# aineed

./: .gitignore  Cargo.toml  LICENSE  import-js.md  install.sh  story_optimized.txt
.github/workflows/: build-wheels.yml
AI_CODING/: AI_PROJECT_OUTLINE.md
AI_CODING/AI_DOCS/provider-docs/anthropic-docs/: anthropic-api-docs.md  anthropic-api.md
AI_CODING/AI_DOCS/provider-docs/openai-docs/: dall-e-3-docs.md  openai-api-docs.md  openai-api.md
AI_CODING/AI_DOCS/provider-docs/openrouter-docs/: openrouter-api-docs.md  openrouter-api.md
AI_CODING/AI_DOCS/provider-docs/togetherai-docs/: togetherai-api-docs.md  togetherai-api.md
AI_CODING/AI_DOCS/tech-stack-docs/: gemini-info.md
AI_CODING/AI_DOCS/tech-stack-docs/Py03-rust-docs.md/: calling-existing-code.md
AI_CODING/AI_DOCS/tech-stack-docs/importing-nonbrowser-js.md/: import-js.md
AI_CODING/AI_DOCS/tech-stack-docs/javascript-and-python-in-rust/: info1.md
AI_CODING/AI_DOCS/tech-stack-docs/js-snippets-in-rust.md/: js-snippets.md
AI_CODING/AI_DOCS/tech-stack-docs/webassembly-in-webassembly.md/: wasm-in-wasm.md
crates/aineed-cli/: Cargo.toml
crates/aineed-cli/src/: cli.rs
crates/aineed-py/: Cargo.toml  README.md  pyproject.toml
crates/aineed-py/src/: lib.rs
python/: README.md  pyproject.toml
rust/: Cargo.toml  README.md
src/: cli.rs  config.rs  main.rs
src/providers/: anthropic.rs  openrouter.rs  togetherai.rs
